Fixed white space in card

--- a/src/Page/Home/Home.scss
+++ b/src/Page/Home/Home.scss
@@ -22,13 +22,14 @@
         transition: all 0.3s ease-in-out;
         position: relative;
         z-index: 3;
+        height: 100%;
         
 
         &:hover {
             transform: scale(1.05);
            
 
-            /* The least supported option. */
+            
             .data {
                 visibility: visible;
                 background: rgba(0, 0, 0, 0.4);
@@ -38,11 +39,12 @@
         .img {
             width: 100%;
             height: 100%;
+            
 
             img {
                 width: 100%;
                 height: 100%;
-
+                object-fit: cover;
             }
 
         }
@@ -57,6 +59,7 @@
             right: 0;
             top: 0;
             bottom: 0;
+            height: 100%;
             box-sizing: border-box;
             color: #fff;
             display: flex;
@@ -120,6 +123,9 @@
 
     @media (min-width: 1800px) {
         grid-template-columns: repeat(8, 1fr);
+    }
+    @media (min-width: 1800px) {
+        grid-template-columns: repeat(9, 1fr);
     }
 
 }
